8188872: runtime/ErrorHandling/TimeoutInErrorHandlingTest.java fails intermittently

Reviewed-by: dholmes, stuefe